# smolvlm2-structured-food-extraction

./: .gitignore  README.md  fix_notebook.py  pyproject.toml  requirements.txt
demos/FoodExtract-Vision-v1/: app.py
notebooks/: 01_fine_tuning.ipynb  VLM_Finetuning.ipynb
